--- a/index.html
+++ b/index.html
@@ -18,22 +18,34 @@
                 </ul>
         </header>
         <div id="about-me">
-            <div class="desc"></div>
-            <img src="" alt="">
-            <div class="icons"></div>
+            <div class="desc">
+                <p>Hello, I'm <br>
+                <strong>Nafisa Musani</strong><br>
+                I'm a <strong>Web developer</strong><br><br>
+                </p>
+                <p>
+                I'm currently a 3rd year student in Computer Engineering<br>
+                in Atmiya University, Rajkot. I'm a curious learner and <br>
+                like to solve problems and learn new things. I have an <br>
+                ambivert personality which makes me good team player<br>
+                and also work efficiently alone.
+                </p>
+            </div>
+            <div class="image"></div>
+            <div class="icons">
+                
+            </div>
         </div>
         <div id="education">
-            <div class="e-box">
-                <img src="" alt="">
-                <p></p>
+            <div class="e-box" id="primary">
+                <h2>jhfughv</h2>
             </div>
-            <div class="e-box">
-                <img src="" alt="">
-                <p></p>
+            <div class="e-box" id="higher">
+                <h2>jhfughv</h2>
+
             </div>
-            <div class="e-box">
-                <img src="" alt="">
-                <p></p>
+            <div class="e-box" id="college">
+                <h2 class="grey">Atmiya University - Rajkot</h2>
             </div>
         </div>
         <div id="skills">
