--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#contact-me">Contact Me</a></li>
                 </ul>
         </header>
-        <div id="about-me">
+        <div class = "comm" id="about-me">
             <div class="desc">
                 <p>Hello, I'm <br>
                 <strong>Nafisa Musani</strong><br>
@@ -36,37 +36,57 @@
                 
             </div>
         </div>
-        <div id="education">
+        <div class = "comm" id="education">
             <div class="e-box" id="primary">
-                <h2>jhfughv</h2>
+                <h2 class="grey">Nooraniyah English Medium School - Rajkot</h2>
             </div>
             <div class="e-box" id="higher">
-                <h2>jhfughv</h2>
+                <h2 class="grey">Saint Mary's School - Rajkot</h2>
 
             </div>
             <div class="e-box" id="college">
                 <h2 class="grey">Atmiya University - Rajkot</h2>
             </div>
         </div>
-        <div id="skills">
-            <div class="s-box">
-                <h2></h2>
-            </div>
-            <div class="s-box">
-                <h2></h2>
-            </div>
-            <div class="s-box">
-                <h2></h2>
-            </div>
-            <div class="s-box">
-                <h2></h2>
-            </div>
-            <div class="s-box">
-                <h2></h2>
-            </div>
-            <div class="s-box">
-                <h2></h2>
-            </div>
+        <div class = "comm" id="skills">
+           <div class="box">
+                <div class="s-box">
+                    <div class="glass">
+                        <div id="html"></div>
+                        <h2>HTML</h2>
+                    </div>
+                </div>
+                <div class="s-box">
+                    <div class="glass">
+                        <div id="css"></div>
+                        <h2>CSS</h2>
+                    </div>
+                </div>
+                <div class="s-box">
+                    <div class="glass">
+                        <div id="dsa"></div>
+                        <h2>DSA</h2>
+                    </div>
+                </div>
+                <div class="s-box">
+                    <div class="glass">
+                        <div id="cpp"></div>
+                        <h2>C++</h2>
+                    </div>
+                </div>
+                <div class="s-box">
+                    <div class="glass">
+                        <div id="java"></div>
+                        <h2>Java</h2>
+                    </div>
+                </div>
+                <div class="s-box">
+                    <div class="glass" >
+                        <div id="python"></div>
+                        <h2>Python</h2>
+                    </div>
+                </div>
+           </div>
         </div>
         <div id="contact-me">
             <div class="c-details"></div>
