added style in About Me

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
@@ -20,20 +21,21 @@
         <div class = "comm" id="about-me">
             <div class="desc">
                 <p>Hello, I'm <br>
-                <strong>Nafisa Musani</strong><br>
-                I'm a <strong>Web developer</strong><br><br>
+                <strong>Nafisa Musani</strong></p>
+                <p>I'm a <strong>Web developer</strong><br><br>
                 </p>
                 <p>
-                I'm currently a 3rd year student in Computer Engineering<br>
-                in Atmiya University, Rajkot. I'm a curious learner and <br>
-                like to solve problems and learn new things. I have an <br>
-                ambivert personality which makes me good team player<br>
+                I'm currently a 3rd year student in Computer Engineering
+                in Atmiya University, Rajkot. I'm a curious learner and 
+                like to solve problems and learn new things. I have an 
+                ambivert personality which makes me good team player
                 and also work efficiently alone.
                 </p>
             </div>
-            <div class="image"></div>
             <div class="icons">
-                
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
         <div class = "comm" id="education">
@@ -88,12 +90,37 @@
                 </div>
            </div>
         </div>
-        <div id="contact-me">
-            <div class="c-details"></div>
-            <div class="message"></div>
-            <div class="social-platform"></div>
+        <div class="comm"id="contact-me">
+            <div class="c-details">
+                <div class="call">
+                    <i class="fa-solid fa-phone"></i>
+                    <div class="text">
+                        <h4>Call-me</h4>
+                        <p>+91 8160073864</p>
+                    </div>
+                </div>
+                <div class="call">
+                    <i class="fa-solid fa-envelope"></i>
+                    <div class="text">
+                        <h4>Call-me</h4>
+                        <p>+91 8160073864</p>
+                    </div>
+                </div>
+                <div class="call">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <div class="text">
+                        <h4>Call-me</h4>
+                        <p>+91 8160073864</p>
+                    </div>
+                </div>
+            </div>
+            <div class="message">
+                <label for="name">Enter</label>
+                <input type="text" name="name" id="name">
+            </div>
         </div>
         <footer class="footer">
+            <div class="social-platform"></div>
             <p>
                 Copyright &copy; Nafisa Musani rights reserved
             </p>
