added styles to education

--- a/index.html
+++ b/index.html
@@ -39,17 +39,43 @@
             </div>
         </div>
         <div class = "comm" id="education">
-            <div class="e-box" id="primary">
-                <h2 class="grey">Nooraniyah English Medium School - Rajkot</h2>
-            </div>
-            <div class="e-box" id="higher">
-                <h2 class="grey">Saint Mary's School - Rajkot</h2>
-
-            </div>
-            <div class="e-box" id="college">
-                <h2 class="grey">Atmiya University - Rajkot</h2>
-            </div>
-        </div>
+            <!-- <div class="up">
+                <h1>Education</h1>
+            </div> -->
+                <div class = card-container>
+                    <div class = card>
+                      <div class = image>
+                        <img href = "#" src ="image/nooraniyah-english-school-rajkot_cover (2).jpg">
+                      </div>
+                      <div class = content>
+                        <p>2005 - 2019</p>
+                        <h2>Nooraniyah English Medium School - Rajkot</h2>
+                      </div>
+                    </div>    
+                  </div>
+                  <div class = card-container>
+                    <div class = card>
+                      <div class = image>
+                        <img href = "#" src ="image/st-marry.jpg">
+                      </div>
+                      <div class = content>
+                        <p>2019 - 2021</p>
+                        <h2>Saint Mary's School - Rajkot</h2>
+                      </div>
+                    </div>    
+                  </div>
+                  <div class = card-container>
+                    <div class = card>
+                      <div class = image>
+                        <img href = "#" src ="image/Atmiya-University.jpg">
+                      </div>
+                      <div class = content>
+                        <p>2021 - Present</p>
+                        <h2>Atmiya University - Rajkot</h2>
+                      </div>
+                    </div>    
+                  </div>
+                </div>
         <div class = "comm" id="skills">
            <div class="box">
                 <div class="s-box">
