change skills section

--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="container">
         <header class="header">
             <h1>NM</h1>
-                <ul class="nav-bar">
-                    <li><a href="#about-me">About Me</a></li>
-                    <li><a href="#education">Education</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#contact-me">Contact Me</a></li>
-                </ul>
+            <ul class="nav-bar">
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact-me">Contact Me</a></li>
+            </ul>
         </header>
-        <div class = "comm" id="about-me">
+        <div class="comm" id="about-me">
             <div class="desc">
                 <p>Hello, I'm <br>
-                <strong>Nafisa Musani</strong></p>
+                    <strong>Nafisa Musani</strong>
+                </p>
                 <p>I'm a <strong>Web developer</strong><br><br>
                 </p>
                 <p>
-                I'm currently a 3rd year student in Computer Engineering
-                in Atmiya University, Rajkot. I'm a curious learner and 
-                like to solve problems and learn new things. I have an 
-                ambivert personality which makes me good team player
-                and also work efficiently alone.
+                    I'm currently a 3rd year student in Computer Engineering
+                    in Atmiya University, Rajkot. I'm a curious learner and
+                    like to solve problems and learn new things. I have an
+                    ambivert personality which makes me good team player
+                    and also work efficiently alone.
                 </p>
             </div>
             <div class="icons">
@@ -38,85 +44,90 @@
                 <a href="#"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
-        <div class = "comm" id="education">
-            <!-- <div class="up">
-                <h1>Education</h1>
-            </div> -->
-                <div class = card-container>
-                    <div class = card>
-                      <div class = image>
-                        <img href = "#" src ="image/nooraniyah-english-school-rajkot_cover (2).jpg">
-                      </div>
-                      <div class = content>
-                        <p>2005 - 2019</p>
-                        <h2>Nooraniyah English Medium School - Rajkot</h2>
-                      </div>
-                    </div>    
-                  </div>
-                  <div class = card-container>
-                    <div class = card>
-                      <div class = image>
-                        <img href = "#" src ="image/st-marry.jpg">
-                      </div>
-                      <div class = content>
-                        <p>2019 - 2021</p>
-                        <h2>Saint Mary's School - Rajkot</h2>
-                      </div>
-                    </div>    
-                  </div>
-                  <div class = card-container>
-                    <div class = card>
-                      <div class = image>
-                        <img href = "#" src ="image/Atmiya-University.jpg">
-                      </div>
-                      <div class = content>
-                        <p>2021 - Present</p>
-                        <h2>Atmiya University - Rajkot</h2>
-                      </div>
-                    </div>    
-                  </div>
-                </div>
-        <div class = "comm" id="skills">
-           <div class="box">
-                <div class="s-box">
-                    <div class="glass">
-                        <div id="html"></div>
-                        <h2>HTML</h2>
+        <div class="comm" id="education">
+            <div class="up">
+                <h2>Education</h2>
+            </div>
+            <div class="down">
+                <div class=card-container>
+                    <div class=card>
+                        <div class=image>
+                            <img href="#" src="image/nooraniyah-english-school-rajkot_cover (2).jpg">
+                        </div>
+                        <div class=content>
+                            <p>2005 - 2019</p>
+                            <h2>Nooraniyah English Medium School - Rajkot</h2>
+                        </div>
                     </div>
                 </div>
-                <div class="s-box">
-                    <div class="glass">
-                        <div id="css"></div>
-                        <h2>CSS</h2>
+                <div class=card-container>
+                    <div class=card>
+                        <div class=image>
+                            <img href="#" src="image/st-marry.jpg">
+                        </div>
+                        <div class=content>
+                            <p>2019 - 2021</p>
+                            <h2>Saint Mary's School - Rajkot</h2>
+                        </div>
                     </div>
                 </div>
-                <div class="s-box">
-                    <div class="glass">
-                        <div id="dsa"></div>
-                        <h2>DSA</h2>
+                <div class=card-container>
+                    <div class=card>
+                        <div class=image>
+                            <img href="#" src="image/Atmiya-University.jpg">
+                        </div>
+                        <div class=content>
+                            <p>2021 - Present</p>
+                            <h2>Atmiya University - Rajkot</h2>
+                        </div>
                     </div>
                 </div>
-                <div class="s-box">
-                    <div class="glass">
-                        <div id="cpp"></div>
-                        <h2>C++</h2>
-                    </div>
-                </div>
-                <div class="s-box">
-                    <div class="glass">
-                        <div id="java"></div>
-                        <h2>Java</h2>
-                    </div>
-                </div>
-                <div class="s-box">
-                    <div class="glass" >
-                        <div id="python"></div>
-                        <h2>Python</h2>
-                    </div>
-                </div>
-           </div>
+            </div>
         </div>
-        <div class="comm"id="contact-me">
+        <div class="comm" id="skills">
+            <div class="skills-heading">
+                <h2>Skills</h2>
+            </div>
+            <div class="box">
+                <div class="skills-box">
+                    <div class="inside-box">
+                        <img src="image/icons8-html-144.png" alt="">
+                        <h3>HTML</h3>
+                    </div>
+                </div>
+                <div class="skills-box">
+                    <div class="inside-box">
+                        <img src="image/icons8-css-144.png" alt="">
+                        <h3>CSS</h3>
+                    </div>
+                </div>
+                <div class="skills-box">
+                    <div class="inside-box">
+                        <img src="image/icons8-c-144.png" alt="">
+                        <h3>C</h3>
+                    </div>
+                </div>
+                <div class="skills-box">
+                    <div class="inside-box">
+                        <img src="image/icons8-c-144 (1).png" alt="">
+                        <h3>C++</h3>
+                    </div>
+                </div>
+                <div class="skills-box">
+                    <div class="inside-box">
+                        <img src="image/icons8-java-144.png" alt="">
+                        <h3>Java</h3>
+                    </div>
+                </div>
+                <div class="skills-box">
+                    <div class="inside-box">
+                        <img src="image/icons8-python-144.png" alt="">
+                        <h3>Java</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="comm" id="contact-me">
             <div class="c-details">
                 <div class="call">
                     <i class="fa-solid fa-phone"></i>
@@ -154,4 +165,5 @@
 
     </div>
 </body>
+
 </html>
