added style to contact page

--- a/index.html
+++ b/index.html
@@ -128,39 +128,32 @@
             </div>
         </div>
         <div class="comm" id="contact-me">
-            <div class="c-details">
-                <div class="call">
-                    <i class="fa-solid fa-phone"></i>
-                    <div class="text">
-                        <h4>Call-me</h4>
-                        <p>+91 8160073864</p>
-                    </div>
-                </div>
-                <div class="call">
-                    <i class="fa-solid fa-envelope"></i>
-                    <div class="text">
-                        <h4>Call-me</h4>
-                        <p>+91 8160073864</p>
-                    </div>
-                </div>
-                <div class="call">
-                    <i class="fa-solid fa-location-dot"></i>
-                    <div class="text">
-                        <h4>Call-me</h4>
-                        <p>+91 8160073864</p>
-                    </div>
-                </div>
+            <div class="image-contact">
+                <img src="image/8dd10ea5070a2ea920bef6f2df4e2ed7.png_wh300-removebg-preview.png" alt="">
             </div>
-            <div class="message">
-                <label for="name">Enter</label>
-                <input type="text" name="name" id="name">
+            <form action="#">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="Your name..">
+
+                <label for="email">Email Id</label>
+                <input type="email" id="email" name="email" placeholder="Your Email id..">
+
+                <label for="subject">Message</label>
+                <textarea id="message" name="message" placeholder="Write something.." style="height:200px"></textarea>
+
+                <input type="submit" value="Submit">
+            </form>
+
+        </div>
+        <div class="connect">
+            <div class="round">
+                <i class="fa-solid fa-phone"></i>
+                <i class="fa-solid fa-envelope"></i>
+                <i class="fa-brands fa-linkedin"></i>
             </div>
         </div>
         <footer class="footer">
-            <div class="social-platform"></div>
-            <p>
                 Copyright &copy; Nafisa Musani rights reserved
-            </p>
         </footer>
 
     </div>
