added final touching

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                     and also work efficiently alone.
                 </p>
             </div>
+            <div class="profile">
+                <img src="image/dYHRjBuRWIJOtjS.png" alt="">
+            </div>
             <div class="icons">
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
