--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </p>
                 <p>
                     I'm currently a 3rd year student in Computer Engineering
-                    in Atmiya University, Rajkot. I'm a curious learner and
+                    at Atmiya University, Rajkot. I'm a curious learner and
                     like to solve problems and learn new things. I have an
                     ambivert personality which makes me good team player
                     and also work efficiently alone.
@@ -119,7 +119,7 @@
                 <div class="skills-box">
                     <div class="inside-box">
                         <img src="image/icons8-java-144.png" alt="">
-                        <h3>Java</h3>
+                        <h3>Python</h3>
                     </div>
                 </div>
                 <div class="skills-box">
